# SocietySystem

./: Addactivity.cpp  Addactivity.h  Addactivity.ui  Addsociety.cpp  Addsociety.h  Addsociety.ui  Addstudent.cpp  Addstudent.h  Addstudent.ui  CMakeLists.txt  Interface.cpp  Interface.h  Interface.ui  Login.cpp  Login.h  Regist.cpp  Regist.ui  SocietiesSql.cpp  SocietiesSql.h  Struct.h  login.ui  main.cpp
